# simple_blockchain_v1.0

./: CMakeLists.txt  README.md  build.sh
docs/: 简化版本区块链程序工作说明.doc
docs/test/: api.html  blocks.html  work_flow.html
docs/test/css/: ruige.css
install/: initial.db
libraries/: CMakeLists.txt
libraries/appbase/: CMakeLists.txt  application.cpp  version.cpp
libraries/appbase/include/appbase/: channel.hpp
libraries/chain/: CMakeLists.txt  block.cpp  buffer.cpp  transaction.cpp
libraries/chain/include/: block.hpp  buffer.hpp  transaction.hpp
libraries/fc/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/chain_api_plugin/: CMakeLists.txt  chain_api_plugin.cpp
plugins/chain_api_plugin/include/eosio/chain_api_plugin/: chain_api_plugin.hpp
plugins/chain_plugin/: CMakeLists.txt  chain_plugin.cpp
plugins/chain_plugin/include/eosio/chain_plugin/: chain_plugin.hpp
plugins/http_plugin/: CMakeLists.txt  http_plugin.cpp
plugins/schedule_plugin/: CMakeLists.txt  movescript.sh  schedule_plugin.cpp
plugins/schedule_plugin/include/eosio/schedule_plugin/: schedule_plugin.hpp
plugins/schedule_plugin/schedule/: batch.sh  database_backup.sh  pushblock_fromIoT.sh  schedule.ini
plugins/sqlite_plugin/: CMakeLists.txt  config.hpp.ini  sqlite_plugin.cpp
plugins/sqlite_plugin/include/eosio/sqlite_plugin/: sqlite_plugin.hpp
plugins/tool_plugin/: CMakeLists.txt  tool_plugin.cpp
plugins/tool_plugin/include/eosio/tool_plugin/: tool_plugin.hpp
programs/: CMakeLists.txt
programs/keosd/: CMakeLists.txt  main.cpp
programs/nodeos/: CMakeLists.txt  main.cpp
scripts/: CMakeLists.txt  build_centos.sh  build_ubuntu.sh  generate_tarball.sh.in
